<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_weight_entry">

    <fragment
        android:id="@+id/navigation_weight_entry"
        android:name="com.weighttracker.ui.entry.WeightEntryFragment"
        android:label="@string/nav_weight_entry"
        tools:layout="@layout/fragment_weight_entry" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.weighttracker.ui.history.HistoryFragment"
        android:label="@string/nav_weight_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.weighttracker.ui.chart.ChartFragment"
        android:label="@string/nav_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.weighttracker.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation> 